--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
-    font-family: "Myriad Pro", "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, sans-serif;
+    font-family: 'Georgia', "Myriad Pro", "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, sans-serif;
     padding: 2em;
-    padding-bottom: 10em;
-    padding-top: 4em;
+    padding-bottom: 2em;
+    padding-top: 2em;
 }
 
 button.g-button, a.g-button, input[type=submit].g-button {
@@ -15,36 +15,6 @@ button.g-button, a.g-button, input[type=submit].g-button {
 	text-align: center;
 	text-shadow: 0px 1px 1px rgba(255,255,255,1);
 	line-height: 1;
-}
-
-.butt {
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
-	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
-	background-color:#ededed;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	color:#777777;
-	font-family:arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:1px 1px 0px #ffffff;
-}.butt:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
-	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
-	background-color:#dfdfdf;
-}.butt:active {
-	position:relative;
-	top:1px;
 }
 
 .divider{
@@ -60,7 +30,7 @@ button.g-button, a.g-button, input[type=submit].g-button {
 }
 
 input.box{
-  padding: 7px;
+  padding: 4px;
   -webkit-box-shadow: inset 2px 2px 2px 0px #dddddd;
   -moz-box-shadow: inset 2px 2px 2px 0px #dddddd;
   box-shadow: inset 2px 2px 2px 0px #dddddd;
@@ -82,26 +52,25 @@ canvas {
 
 .my-menus{
 	background: rgba(255,255,255,0.9);
-	padding: 10px;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
+	padding: 7px;
+	-moz-border-radius:0px 0px 11px 9px;
+	-webkit-border-radius:0px 0px 11px 9px;
     pointer-events: all;
 }
 
-#story-top{
+.story-top{
 	visibility: visible;
-	background: rgba(240,240,240,0.9);
+	background: rgba(250,236,210,0.8);
 	padding: 10px;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
+	-moz-border-radius:0px 0px 11px 9px;
+	-webkit-border-radius:0px 0px 11px 9px;
     pointer-events: all;
+    border: 4px dotted #895c00;
 }
 
-#header-fixed {
+.header-fixed {
 	position: fixed; 
 	top: 0px; 
-	z-index: 100000;
-    pointer-events: none;
 }
 
 #footer-fixed {
