--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,8 @@ canvas {
      padding:15px;
      text-align:center;
 }
+
+.lead{
+    font-size: 17px !important;
+    line-height: 25px !important;
+}
